tests/baselines/reference/genericConstraintSatisfaction1.errors.txt
tests/cases/compiler/genericConstraintSatisfaction1.ts(6,5): error TS2345: Argument of type '{ s: 数字; }' is not assignable to parameter of type '{ s: 文字; }'.
  Types of property 's' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/genericConstraintSatisfaction1.ts (1 errors) ====
    interface I<S> {
       f: <T extends S>(x: T) => void
    }
     
    var x: I<{s: string}>
    x.f({s: 1})
        ~~~~~~
!!! error TS2345: Argument of type '{ s: 数字; }' is not assignable to parameter of type '{ s: 文字; }'.
!!! error TS2345:   Types of property 's' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '文字'.
    